--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,15 @@ h1 {
     font-size: 10vw;
 }
 
-body div{
+#game {
     display: grid;
     align-content: center;
     color: white;
-    grid-template-columns: 20% 20% 20% 20%;
+    grid-template-columns: 20% 20% 20% 5%;
     justify-content: center;
 }
 
-button{
+#rock, #paper, #scissors {
     background-color: rgb(41, 40, 40);
     border: none;    
     color:aliceblue;
@@ -30,9 +30,8 @@ button{
     width: 15vw;
 }
 
-button:hover {
+#rock:hover , #paper:hover , #scissors:hover {
     background-color: white;
-    color:black;
 }
 
 img{
@@ -42,7 +41,43 @@ img{
 }
 
 #resetGame{
+  font-family:"New Rocker", system-ui;
+  justify-content:center;
+  padding: 1rem  0rem 0rem 4rem;
+  color:white;
+  background-color:black;
+  font-size:3em;
+  text-orientation: upright;
+  writing-mode: vertical-rl;
+  display: flex;
+  flex-wrap: wrap;
     position: relative;
     float: right;
-    grid-column: 3/4;
+    grid-column: 4/4;
+    grid-row: 1/4;
+  border: 2px solid lightcoral;
+}
+
+#playerResult{
+  grid-column:;
+    font-size:4vw;
+}
+
+#computerResult{
+    font-size:4vw;
+}
+
+#winnerAnnouncement{
+  font-size:7vw;
+  grid-column: 1/4;
+  grid-row: 3/4;
+  display: flex;
+  justify-content: center;
+  color: red
+}
+
+#resetGame:hover{
+  background-color: red;
+  color: black;
+  border:none;
 }
